--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,30 +51,30 @@
             tools:ignore="MissingConstraints" />
 
         <TextView
-            android:id="@+id/exp"
+            android:id="@+id/ability"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:layout_marginEnd="23dp"
-            android:text="Experiencia Base: "
+            android:text="Habilidad: "
             android:textColor="@color/purple_700"
             android:textSize="30sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/expnumber"
+            app:layout_constraintEnd_toStartOf="@+id/abilityname"
             app:layout_constraintTop_toBottomOf="@+id/name"
             tools:ignore="MissingConstraints" />
 
         <TextView
-            android:id="@+id/expnumber"
+            android:id="@+id/abilityname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="23dp"
             android:layout_marginTop="36dp"
-            android:text="Exp"
+            android:text="attack"
             android:textAlignment="center"
             android:textColor="@color/purple_200"
             android:textSize="30sp"
-            app:layout_constraintStart_toEndOf="@+id/exp"
+            app:layout_constraintStart_toEndOf="@+id/ability"
             app:layout_constraintTop_toBottomOf="@+id/name"
             tools:ignore="MissingConstraints" />
     </androidx.constraintlayout.widget.ConstraintLayout>
