--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
             android:textAlignment="center"
             android:textColor="@color/purple_200"
             android:textSize="30sp"
-            app:layout_constraintBottom_toTopOf="@+id/exp"
+            app:layout_constraintBottom_toTopOf="@+id/ability"
             app:layout_constraintTop_toBottomOf="@+id/favpokemon"
             tools:ignore="MissingConstraints" />
 
